--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ repositories {
 dependencies {
 	groovy 'org.codehaus.groovy:groovy-all:1.8.7'
 	compile 'com.google.http-client:google-http-client-jackson:1.12.0-beta'
+	testCompile 'org.spockframework:spock-core:0.7-groovy-1.8',
+				'cglib:cglib-nodep:2.2.2',
+				'org.objenesis:objenesis:1.3'
 	jenkinsTest 'org.jenkins-ci.plugins:ant:1.1@jar',
 				'org.jenkins-ci.plugins:javadoc:1.0@jar'
 }
