--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ jenkinsPlugin {
 //	url = 'https://wiki.jenkins-ci.org/display/JENKINS/Typetalk+Plugin'
 //	gitHubUrl = 'https://github.com/jenkinsci/typetalk-plugin'
 
+	shortName = 'typetalk'
+
 	developers {
 		developer {
 			id 'ikikko'
