--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,18 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath 'org.jenkins-ci.tools:gradle-jpi-plugin:0.4.0'
+		classpath 'org.jenkins-ci.tools:gradle-jpi-plugin:0.5.0'
 	}
 }
 
 apply plugin: 'jpi'
 apply plugin: 'eclipse'
+apply plugin: 'idea'
+
+group = 'org.jenkinsci.plugins'
+version = '0.9'
+description = 'Typetalk Plugin'
+archivesBaseName = 'typetalk'
 
 repositories {
 	mavenCentral()
@@ -23,31 +29,23 @@ repositories {
 }
 
 dependencies {
-	groovy 'org.codehaus.groovy:groovy-all:1.8.7'
-	compile 'com.google.http-client:google-http-client-jackson:1.12.0-beta'
+	compile 'com.google.http-client:google-http-client-jackson:1.17.0-rc'
 	testCompile 'org.spockframework:spock-core:0.7-groovy-1.8',
-				'cglib:cglib-nodep:2.2.2',
-				'org.objenesis:objenesis:1.3'
-	jenkinsTest 'org.jenkins-ci.plugins:ant:1.1@jar',
-				'org.jenkins-ci.plugins:javadoc:1.0@jar'
+			'cglib:cglib-nodep:2.2.2',
+			'org.objenesis:objenesis:1.3'
 }
 
-group = 'org.jenkinsci.plugins'
-version = '0.8'
-description = 'Typetalk Plugin'
-
 jenkinsPlugin {
-	coreVersion = '1.477'
+	coreVersion = '1.509'
 	displayName = 'Typetalk Plugin'
 //	url = 'https://wiki.jenkins-ci.org/display/JENKINS/Typetalk+Plugin'
 //	gitHubUrl = 'https://github.com/jenkinsci/typetalk-plugin'
-
-	shortName = 'typetalk'
 
 	developers {
 		developer {
 			id 'ikikko'
 			name 'Tomonari Nakamura'
+			email 'ikikko+github@gmail.com'
 		}
 		developer {
 			id 'baba'
@@ -57,5 +55,5 @@ jenkinsPlugin {
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '1.1'
+	gradleVersion = '1.8'
 }
