--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,8 @@ repositories {
 }
 
 dependencies {
-	compile 'com.google.http-client:google-http-client-jackson:1.17.0-rc'
+	compile 'com.google.http-client:google-http-client-jackson:1.17.0-rc',
+			'com.google.oauth-client:google-oauth-client:1.17.0-rc'
 	testCompile 'org.spockframework:spock-core:0.7-groovy-1.8',
 			'cglib:cglib-nodep:2.2.2',
 			'org.objenesis:objenesis:1.3'
